# play-release-song

./: .env  .gitignore  Cargo.toml  LICENSE.md  README.md  flake.nix
src/: main.rs
